tests/paczka1/small_fuzzy/20638745.err
Error in line 6: l98kDyloeF S398 37,7
Error in line 8: l98kDyloeF S688 94,1
Error in line 5: d26 A673 10,2
Error in line 11: npVWN8EdR76 A863 33,1
